Warnung anzeigen, wenn Geschlecht nicht passt
refs #16

--- a/app/views/competitions/people/_connected.html.haml
+++ b/app/views/competitions/people/_connected.html.haml
@@ -8,6 +8,13 @@
   Verknüpft mit <strong class="first-name">#{person.fire_sport_statistics_person&.first_name}</strong> <strong class="last-name">#{person.fire_sport_statistics_person&.last_name}</strong>
   = link_to "https://feuerwehrsport-statistik.de/people/#{person.fire_sport_statistics_person_id}", target: '_blank', rel: 'noopener', title: 'Informationen über diese Person auf Feuerwehrsport-Statistik.de aufrufen', class: 'btn btn-sm btn-light ms-2' do
     %i.far.fa-arrow-up-right-from-square
+
+  - if can?(:edit, person) && person.band.gender != 'indifferent'
+    .row.mt-4#gender-warning{ data: { gender: person.band.gender }, class: person.fire_sport_statistics_person&.gender == person.band.gender ? 'd-none' : '' }
+      .col-md-8
+        .alert.alert-warning
+          %i.far.fa-warning
+          Das Geschlecht passt nicht, soll das so?
 .alert.alert-warning.mb-0#fire-sport-not-connected{ class: person.fire_sport_statistics_person.present? ? 'd-none' : nil }
   %i.far.fa-warning.me-2
   Keine Verknüpfung mit einer vorhandenen Person
