--- a/spec/fixtures/views/People_People_managements_uses_CRUD-edit/view.html
+++ b/spec/fixtures/views/People_People_managements_uses_CRUD-edit/view.html
@@ -167,7 +167,15 @@ new team
 <i class='far fa-check me-2'></i>
 Verknüpft mit <strong class="first-name"></strong> <strong class="last-name"></strong>
 <a target="_blank" rel="noopener" title="Informationen über diese Person auf Feuerwehrsport-Statistik.de aufrufen" class="btn btn-sm btn-light ms-2" href="https://feuerwehrsport-statistik.de/people/"><i class='far fa-arrow-up-right-from-square'></i>
-</a></div>
+</a><div class='row mt-4' data-gender='female' id='gender-warning'>
+<div class='col-md-8'>
+<div class='alert alert-warning'>
+<i class='far fa-warning'></i>
+Das Geschlecht passt nicht, soll das so?
+</div>
+</div>
+</div>
+</div>
 <div class='alert alert-warning mb-0' id='fire-sport-not-connected'>
 <i class='far fa-warning me-2'></i>
 Keine Verknüpfung mit einer vorhandenen Person
