--- a/app/views/competitions/score/results/_form.html.haml
+++ b/app/views/competitions/score/results/_form.html.haml
@@ -9,25 +9,24 @@
 
       - if @result.band.team_tags.present?
         .row
-          .col-md-6
+          .col-lg-6
             = f.input :team_tags_included, as: :check_boxes, collection: @result.band.team_tags
-          .col-md-6
+          .col-lg-6
             = f.input :team_tags_excluded, as: :check_boxes, collection: @result.band.team_tags
       - if @result.band.person_tags.present?
         .row
-          .col-md-6
+          .col-lg-6
             = f.input :person_tags_included, as: :check_boxes, collection: @result.band.person_tags
-          .col-md-6
+          .col-lg-6
             = f.input :person_tags_excluded, as: :check_boxes, collection: @result.band.person_tags
       %small.text-muted Wenn Kennzeichnungen ausgewählt wurden, können die Ergebnisse entsprechend eingegrenzt werden.
   - else
     = f.association :assessment, collection: @competition.assessments.sort, hint: 'Es kann mehrere Ergebnisse für eine Wertung geben: Zum Beispiel Finalläufe.'
     = f.input :forced_name, hint: 'Der Name wird automatisch aus den Wertungen und Kennzeichnungen generiert. Hier kann man ihn überschreiben.', input_html: { data: { name_preview: 1 } }
-    = f.input :date, html5: true, hint: 'Mit Angabe dieses Datums kann man das allgemeine Datum des Wettkampfes auf dem PDF überschreiben. Dies ist nützlich, wenn der Wettkampf über mehrer Tage geht.'
     %fieldset.group.row
-      .col-md-6
+      .col-lg-6
         = f.input :group_assessment, as: :boolean, hint: 'Eine Mannschaftswertung kann für eine Gesamtwertung wichtig sein.'
-      .col-md-6
+      .col-lg-6
         = f.input :group_run_count
         = f.input :group_score_count
         %small.text-muted Diese Werte sind nur bei Mannschaftswertungen der Einzeldisziplinen relevant.
@@ -36,6 +35,11 @@
       %legend Berechnung der Ergebnisse
       = f.input :calculation_method, as: :radio_buttons, collection: Score::Result::CALCULATION_METHODS.map { |k, _v| [t("score_calculation_methods.#{k}"), k] }
       %small.text-muted Bei einigen Wettkämpfen gewinnt nicht der Schnellste, sondern der Kontinuierlichste.
+    %fieldset.group
+      %legend Optional
+      .row
+        .col-lg-6
+          = f.input :date, html5: true, hint: 'Mit Angabe dieses Datums kann man das allgemeine Datum des Wettkampfes auf dem PDF überschreiben. Dies ist nützlich, wenn der Wettkampf über mehrer Tage geht.'
 - c.footer do
   = f.primary_button :submit
   = f.cancel_button(competition_score_results_path)
