--- a/app/views/application/_nav_menu.haml
+++ b/app/views/application/_nav_menu.haml
@@ -1,5 +1,5 @@
 %a.navbar-brand{ href: root_path, title: 'Startseite' }
-  = render inline: Rails.root.join('app/assets/images/logo-2.svg').read
+  = render inline: Rails.root.join('app/assets/images/logo.svg').read
 %button.navbar-toggler{ 'aria-controls' => 'navbar-supported-content', 'aria-expanded' => 'false', 'aria-label' => 'Menü anzeigen', 'data-bs-target' => '#navbar-supported-content', 'data-bs-toggle' => 'collapse', type: 'button' }
   %span.navbar-toggler-icon
 .collapse.navbar-collapse#navbar-supported-content
