--- a/app/views/competitions/score/results/index.html.haml
+++ b/app/views/competitions/score/results/index.html.haml
@@ -1,15 +1,16 @@
 = render 'competitions/header', competition: @competition, sub: resource_class.model_name.human(count: :many)
 
-.row.g-4
-  .col-md-8
-    = card(resource_class.model_name.human(count: :many)) do |c|
-      - if resource_collection.exists?
-        - c.direct do
-          = render('index_table', resource_class:, resource_collection:)
-      - else
-        - c.body do
-          .alert.alert-info= t('a.no_entries_found')
+- cache_if(current_user.nil?, @competition) do
+  .row.g-4
+    .col-md-8
+      = card(resource_class.model_name.human(count: :many)) do |c|
+        - if resource_collection.exists?
+          - c.direct do
+            = render('index_table', resource_class:, resource_collection:)
+        - else
+          - c.body do
+            .alert.alert-info= t('a.no_entries_found')
 
-      - if can?(:create, resource_class.new(competition: @competition))
-        - c.primary_actions do |actions|
-          - actions.link_to t('a.add'), { action: :new }, end_icon: :square_plus
+        - if can?(:create, resource_class.new(competition: @competition))
+          - c.primary_actions do |actions|
+            - actions.link_to t('a.add'), { action: :new }, end_icon: :square_plus
