--- a/app/views/competitions/score/results/show.html.haml
+++ b/app/views/competitions/score/results/show.html.haml
@@ -1,56 +1,57 @@
 = render 'competitions/header', competition: @competition, sub: resource_class.model_name.human(count: :many)
 
-.row.g-4
-  .col-md-8.mb-4
-    = render 'overview_card', result: @result
+- cache_if(current_user.nil?, @competition) do
+  .row.g-4
+    .col-md-8.mb-4
+      = render 'overview_card', result: @result
 
-  - if can?(:edit, @result)
-    .col-md-4
-      = card(t('a.actions')) do |c|
-        - c.primary_actions do |actions|
-          - actions.link_to 'Übersicht', { action: :index }, end_icon: :list
-        - c.body do
-          .d-grid.gap-2
-            = btn_link_to 'Bearbeiten', action: :edit
-            = btn_link_to 'Cup-Serie-Zugehörigkeit', action: :edit, form: 'series_assessments'
-            - if @result.band.team_tags.present? || @result.band.person_tags.present?
-              = btn_link_to 'Kennzeichungen', action: :edit, form: 'tags'
-            = btn_link_to 'Löschen', { action: :destroy }, data: { turbo_method: 'delete', turbo_confirm: 'Ergebnisliste wirklich löschen? Die zugehörigen Startlisten werden verändert!' }
-        - if can?(:edit, @result) && Certificates::Template.exists?
-          = btn_link_to 'Urkunden', new_competition_certificates_list_path(score_result_id: @result.id)
+    - if can?(:edit, @result)
+      .col-md-4
+        = card(t('a.actions')) do |c|
+          - c.primary_actions do |actions|
+            - actions.link_to 'Übersicht', { action: :index }, end_icon: :list
+          - c.body do
+            .d-grid.gap-2
+              = btn_link_to 'Bearbeiten', action: :edit
+              = btn_link_to 'Cup-Serie-Zugehörigkeit', action: :edit, form: 'series_assessments'
+              - if @result.band.team_tags.present? || @result.band.person_tags.present?
+                = btn_link_to 'Kennzeichungen', action: :edit, form: 'tags'
+              = btn_link_to 'Löschen', { action: :destroy }, data: { turbo_method: 'delete', turbo_confirm: 'Ergebnisliste wirklich löschen? Die zugehörigen Startlisten werden verändert!' }
+          - if can?(:edit, @result) && Certificates::Template.exists?
+            = btn_link_to 'Urkunden', new_competition_certificates_list_path(score_result_id: @result.id)
 
-  - if @rows.count > 0
-    .col-md-12
-      = card_direct(@result.name) do
-        - if @discipline.single_discipline?
-          = render 'result_table_single', rows: @rows, places: true
-        - else
-          = render 'result_table_group', rows: @rows, places: true
-
-    - if @result.group_assessment? && @result.discipline.single_discipline?
+    - if @rows.count > 0
       .col-md-12
-        = card_direct('Mannschaftswertung') do
-          %table.table.table-bordered
-            %tr
-              %th
-              %th Mannschaft
-              %th Zeit
-            - @group_result.rows.each do |row|
-              %tr{ class: row_invalid_class(row) }
-                %td #{@group_result.place_for_row(row)}.
-                %th= row.team.full_name
-                %th= row.result_entry.human_time
-              %tr{ class: row_invalid_class(row) }
-                %td
-                %td{ colspan: 2 }
-                  %em= row.rows_in.map(&:display).join(', ')
-                  %small= row.rows_out.map(&:display).join(', ')
-  - else
-    .col-md-8
-      .alert.alert-info Keine Einträge gefunden
+        = card_direct(@result.name) do
+          - if @discipline.single_discipline?
+            = render 'result_table_single', rows: @rows, places: true
+          - else
+            = render 'result_table_group', rows: @rows, places: true
+
+      - if @result.group_assessment? && @result.discipline.single_discipline?
+        .col-md-12
+          = card_direct('Mannschaftswertung') do
+            %table.table.table-bordered
+              %tr
+                %th
+                %th Mannschaft
+                %th Zeit
+              - @group_result.rows.each do |row|
+                %tr{ class: row_invalid_class(row) }
+                  %td #{@group_result.place_for_row(row)}.
+                  %th= row.team.full_name
+                  %th= row.result_entry.human_time
+                %tr{ class: row_invalid_class(row) }
+                  %td
+                  %td{ colspan: 2 }
+                    %em= row.rows_in.map(&:display).join(', ')
+                    %small= row.rows_out.map(&:display).join(', ')
+    - else
+      .col-md-8
+        .alert.alert-info Keine Einträge gefunden
 
 
-  - if @out_of_competition_rows.count > 0
-    .col-md-12.much-data
-      = card_direct('Außer der Wertung') do
-        = render 'result_table', rows: @out_of_competition_rows, places: false
+    - if @out_of_competition_rows.count > 0
+      .col-md-12.much-data
+        = card_direct('Außer der Wertung') do
+          = render 'result_table', rows: @out_of_competition_rows, places: false
