LA-Bestzeiten im Badge anzeigen
closes #21
closes #11

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -291,7 +291,7 @@ li.sortable-drag
   tr:hover
     background-color: $light
 
-span.best-badge
+span.best-badge, span.team-badge
   display: inline-block
   min-width: 18px
   padding: 4px 4px
