--- a/app/views/competitions/score/lists/select_entity.html.haml
+++ b/app/views/competitions/score/lists/select_entity.html.haml
@@ -10,7 +10,7 @@
           - else
             - free_run, free_track = @list.next_free_track
             = f.simple_fields_for :entries, @list.entries.build(run: free_run, track: free_track, entity_type: @list.discipline_klass.name) do |g|
-              = g.association :entity, collection: @not_yet_present_entities, label_method: :full_name
+              = g.association :entity, collection: @not_yet_present_entities, label_method: :full_name_with_band
               = g.input :run, as: :hidden
               = g.input :track, as: :hidden
               = g.input :entity_type, as: :hidden
