--- a/spec/fixtures/views/Score_List_add_to_list_shows_and_add_entries-select-with-error/view.html
+++ b/spec/fixtures/views/Score_List_add_to_list_shows_and_add_entries-select-with-error/view.html
@@ -135,9 +135,9 @@ Erweitert
 </div>
 <div class='card-body'>
 <div class="form-group my-2 select required score_list_entries_entity"><label class="control-label select required" for="score_list_entries_attributes_0_entity_id">Teilnehmer <abbr title="required">*</abbr></label><select class="form-select select required" name="score_list[entries_attributes][0][entity_id]" id="score_list_entries_attributes_0_entity_id"><option value="" label=" "></option>
-<option value="UUID">Alfred1 Meier1</option>
-<option value="UUID">Alfred2 Meier2</option>
-<option value="UUID">Alfred3 Meier3</option></select></div>
+<option value="UUID">Alfred1 Meier1 (Frauen)</option>
+<option value="UUID">Alfred2 Meier2 (Frauen)</option>
+<option value="UUID">Alfred3 Meier3 (Frauen)</option></select></div>
 <div class="form-group my-2 hidden score_list_entries_run form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="3" name="score_list[entries_attributes][0][run]" id="score_list_entries_attributes_0_run" /></div>
 <div class="form-group my-2 hidden score_list_entries_track form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="1" name="score_list[entries_attributes][0][track]" id="score_list_entries_attributes_0_track" /></div>
 <div class="form-group my-2 hidden score_list_entries_entity_type form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="Person" name="score_list[entries_attributes][0][entity_type]" id="score_list_entries_attributes_0_entity_type" /></div>
