--- a/app/views/competitions/score/results/_result_table_group.html.haml
+++ b/app/views/competitions/score/results/_result_table_group.html.haml
@@ -16,8 +16,7 @@
         %td.less-important #{@result.place_for_row(row)}.
       %td
         = row.entity.full_name
-        - if row.entity.fire_sport_statistics_team.present?
-          = link_to image_tag('statistiken-logo.png'), "https://feuerwehrsport-statistik.de/teams/#{row.entity.fire_sport_statistics_team_id}", target: '_blank', rel: 'noopener', title: 'Informationen über diese Mannschaft auf Feuerwehrsport-Statistik.de aufrufen', class: 'firesport-statistic-link'
+        = team_badge(row.entity&.fire_sport_statistics_team, team.band.gender)
       %td
         %strong= row.best_result_entry.human_time
       - @result.lists.each do |list|
