Aussehen der Listen korrigieren

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -379,3 +379,9 @@ fieldset.group
   padding: 0
   border: 1px solid #888
   width: 80%
+
+.separate-times
+  font-size: 80%
+
+tr.best-time-of-rund td, tr.best-time-of-rund th
+  background-color: #d9ffe1
